# fioul

./: .envrc  Cargo.toml  README.md  config.toml  flake.nix
cli/: Cargo.toml
cli/src/: main.rs
data/: PrixCarburants_annuel_2018.xml  PrixCarburants_annuel_2023.xml  PrixCarburants_instantane.xml  PrixCarburants_quotidien_20231026.xml
fioul/: Cargo.toml
fioul/src/: lib.rs
nix/: hm.nix  nixos.nix
server/: Cargo.toml
server/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
