[package]
name = "fioul-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fioul"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
clap = { version = "4.4.7", features = ["derive", "env"] }
color-eyre = "0.6.2"
directories = "5.0.1"
fioul-types = { version = "0.1.0", path = "../types" }
geo = "0.26.0"
itertools = "0.11.0"
lru = "0.12.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.6"
ureq = { version = "2.8.0", features = ["json"] }
