[package]
name = "fioul-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fioul"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.37", features = ["derive", "env"] }
color-eyre = "0.6.3"
directories = "6.0.0"
fioul-types = { version = "0.1.0", path = "../types" }
geo = "0.30.0"
humantime-serde = "1.1.1"
itertools = "0.14.0"
lru = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
ureq = { version = "3.0.11", features = ["json"] }
