[package]
name = "fioul"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
enum-map = "2.7.0"
log = "0.4.20"
once_cell = "1.18.0"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
roxmltree = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_path_to_error = "0.1.14"
test-log = "0.2.13"
thiserror = "1.0.50"
ureq = "2.8.0"
zip = "0.6.6"

[dev-dependencies]
env_logger = "0.10.0"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
test-log = "0.2.13"
