[package]
name = "fioul"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
chrono = { version = "0.4.41" }
chrono-tz = "0.10.3"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
enum-map = "2.7.3"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", default-features = false, features = [
	"rustls-tls",
] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
test-log = "0.2.17"
thiserror = "2.0.12"
zip = "2.6.1"

[features]
serde = ["dep:serde", "chrono/serde", "enum-map/serde"]

[dev-dependencies]
env_logger = "0.11.8"
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
test-log = "0.2.17"
tokio = { version = "1.44.2", features = ["macros"] }
