[package]
name = "fioul-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
envious = "0.2.2"
fioul = { version = "0.1.0", path = "../fioul", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt", "tracing", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
