[package]
name = "fioul-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
envious = "0.2.2"
fioul = { version = "0.1.0", path = "../fioul", features = ["serde"] }
fioul-types = { version = "0.1.0", path = "../types" }
fnv = "1.0.7"
geo = "0.30.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "tracing", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["tracing", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
