[package]
name = "fioul-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fioul = { version = "0.1.0", path = "../fioul", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
